tests/lean/modBug.lean
theorem proofOfFalse : False := Nat.zero_ne_one (Nat.mod_zero 1)
